test: enhance AuthServiceImplTests with additional assertions and improved logging